crates/oxc_css_parser/tests/recoverable/declaration/top-level-hash.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: declaration at top level is disallowed
  ┌─ top-level-hash.css:1:1
  │
1 │ color: #abc
  │ ^^^^^^^^^^^
